--- a/main.css
+++ b/main.css
@@ -63,4 +63,14 @@ body {
 footer {
   font-family: 'Mulish', sans-serif;
   font-size: 0.875rem;
+  color: white;
+}
+
+a {
+  text-decoration: none;
+  color: #bd806e;
+}
+
+a:hover {
+  color: #eda087;
 }
